# free-eml-extractor

./: README.md  build.py  build_linux.py  build_macos.py  build_windows.py  gui.py  main.py  pyproject.toml
spec/windows/: EMLExtractorCLI.spec  EMLExtractorGUI.spec
