[project]
name = "eml-extractor"
version = "0.1.0"
description = "A modern GUI tool for batch extracting .eml files with attachments and metadata"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
eml-extractor = "main:main"
eml-extractor-gui = "gui:main"
